# tinychat

./: .gitignore  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md
config/: tinychat.example.toml  tinychat.toml
src/: client.rs  config.rs  main.rs  profiles.rs  router.rs  session.rs  ui.rs
